# Entanglement-Transfer-Protocol

./: CHANGELOG.md  CLAUDE.md  CODE_IMPROVEMENTS.md  CONTRIBUTING.md  GSX_PRE_BLOCKCHAIN_ROADMAP.md  LTP_COMPREHENSIVE_REPORT.md  README.md  SECURITY.md  logs-x.txt  pyproject.toml  run_trust_layer.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  contracts.yml
.hypothesis/constants/: 04b3d374b67196a5  08f0ca4cf99deb5a  09e148466fe96b15  0cdf3720062ed200  0d35eec111723b8f  1289c4991d4f4b6c  1b85ee04326b9736  1d271267382c9998  200395a29fde5674  20c49e551797b097  (+57 more)
.semgrep/: api-validation.yml  crypto-lane-separation.yml  key-handling.yml
config/: gsx-testnet.env.template  mainnet.env.template
contracts/: .gitignore  foundry.toml
docs/: DEPLOYMENT_GUIDE.md  PRODUCTION_PLAN.md  README.md  SECURITY_REVIEW-2-24-2026.md  SUMMARY.md  THREAT_MODEL.md  WHITEPAPER.md  bridge-mvp-scope.md
evals/: eval-1.md
examples/: README.md  basic_transfer.py  bridge_transfer.py  dual_lane_hashing.py  error_handling.py  merkle_proofs.py  primitives.py  quickstart.py  signed_envelopes.py  streaming.py
scripts/: download_acvp_vectors.sh
src/: ltp.py
tests/: conftest.py  test_acvp_mldsa.py  test_acvp_mlkem.py  test_adversarial.py  test_anchor_resilience.py  test_backend_boundaries.py  test_backends.py  test_commitment.py  test_compliance.py  test_contract_integration.py  test_cross_validation.py  test_domain_separation.py  test_dst.py  test_dual_lane.py  test_economics.py  test_encoding.py  test_enforcement.py  test_enforcement_pipeline.py  test_entity.py  test_envelope.py  test_erasure.py  test_federation.py  test_formal_math.py  test_formal_verification.py  test_hkdf_rfc_vectors.py  test_integration_trust_layer.py  test_key_rotation.py  test_mainnet_security.py  test_merkle_log.py  test_network.py  test_performance.py  test_primitives.py  test_protocol.py  test_protocol_state.py  test_receipt.py  test_rest_server.py  test_sequencing.py  test_simulator.py  test_storage.py  test_streaming.py  (+3 more)
(+109 files in other folders)
