[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ltp"
version = "3.0.0"
description = "Lattice Transfer Protocol — post-quantum cryptographic data transfer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
# Zero external dependencies for core library (stdlib only).
# Real PQ crypto activates automatically when optional deps are installed:
#   pqcrypto → ML-KEM-768 (FIPS 203) + ML-DSA-65 (FIPS 204)
#   pynacl   → XChaCha20-Poly1305 (libsodium)
dependencies = []

[project.optional-dependencies]
performance = [
    "blake3>=0.3.0",
]
crypto = [
    "pqcrypto>=0.3.0",
    "pynacl>=1.6.2",
]
chain = [
    "web3>=6.0.0",
]
network = [
    "grpcio>=1.50.0",
    "grpcio-tools>=1.50.0",
]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "blake3>=0.3.0",
    "pqcrypto>=0.3.0",
    "pynacl>=1.6.2",
    "grpcio>=1.50.0",
    "grpcio-tools>=1.50.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
